adding to website

--- a/about.html
+++ b/about.html
@@ -24,13 +24,18 @@
         </header>
 
         <main>
-            <section>
-                <div class="hero">
+            <section class="hero">
+                <div>
 
                     <h1>A bit about me</h1>
                         <p>My background is in medical science but my passion lies in building simple tools and systems that could make someone's life easier. 
                         I dabble in front end development, mainly with HTML, CSS & Javascript.
                         When I'm not working, you can find me exploring rain forests, socializing or annoying my dog.</p>
+
+                </div>
+
+                <div class="profilepic">
+                    <img src="images/soda&basil.png">
 
                 </div>
 
