--- a/projects.html
+++ b/projects.html
@@ -30,15 +30,19 @@
 
                     <a href="https://somnace.com">   
                     <img src="Images/SomnacePreview.png" alt="Somnace Screenshot"></a>
+                    <p>An E-commerce website built with Shopify</p>
 
                     <a href="https://www.javascript.com/">    
                     <img src="Images/JSimage.png" alt="Image of Javascript logo"></a>
+                    <p>A project showcasing use of Javascript</p>
 
                     <a href="https://www.python.org/">     
                     <img src="Images/python.png" alt="Image of Python logo"></a>
+                    <p>A project showcasing use of python</p>
+                    
                 </div>
 
-                
+
             </section>
 
 
