--- a/projects.html
+++ b/projects.html
@@ -30,16 +30,22 @@
 
                     <a href="https://somnace.com">   
                     <img src="Images/SomnacePreview.png" alt="Somnace Screenshot"></a>
-                    <p>An E-commerce website built with Shopify</p>
+                    <p>An E-commerce website built with Shopify</p> 
 
+                </div>
+
+
+               <div class="container-2">
                     <a href="https://www.javascript.com/">    
                     <img src="Images/JSimage.png" alt="Image of Javascript logo"></a>
-                    <p>A project showcasing use of Javascript</p>
+                    <p>A project showcasing use of Javascript</p> 
 
+                </div>
+
+                <div class="container-3">
                     <a href="https://www.python.org/">     
                     <img src="Images/python.png" alt="Image of Python logo"></a>
                     <p>A project showcasing use of python</p>
-                    
                 </div>
 
 
