--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="profilepic">
-                    <img src="images/soda&basil.png">
+                    <img src="Images/soda&basil.png">
 
                 </div>
 
