--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,11 @@
         <meta charset="utf-8"/> 
         <meta 
             name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-            />
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-        <title>Soda's Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-        <link rel="stylesheet" href="style4.css"/>
+            <title>Soda's Portfolio</title>
+            <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+            <link rel="stylesheet" href="style4.css"/>
 
     </head>
 
@@ -26,13 +25,11 @@
 
         <main>
             <section>
+
                 <div class="contact">
                     <h1>Contact Me</h1>
                     <p>Email: soda.demoncerf@gmail.com</p>
                     <p>Number: 0432 323 800</p>
-
-                    
-
                 </div>
 
                 <h3>Alternatively, fill in the form below</h3>
@@ -41,10 +38,8 @@
             </section>
 
             <section>
-
                 <div class="my-form">
         
- 
                     <form action="https://formspree.io/f/maykjbre" method="post">
 
                     <div class="form-item">
@@ -73,14 +68,10 @@
 
             </section>
 
-
-
         </main>
-
 
         <footer>
             <p>Sponsored by SheCodes</p>
-
         </footer>
     </body>
 
