--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
         <meta charset="utf-8"/> 
         <meta 
             name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-            />
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-    <title>Soda's Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="style.css"/>
+            <title>Soda's Portfolio</title>
+            <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+            <link rel="stylesheet" href="style.css"/>
 
     </head>
 
@@ -36,7 +35,7 @@
             
                     <p>"It is not the critic who counts. The credit belongs to the man who is actually in the arena, whose face is marred by dust and sweat and blood; who strives valiantly; who errs, who comes short again and again...and who at the worst, if he fails, at least fails while daring greatly."   -Theodore Roosevelt</p>
 
-            </div>
+                </div>
 
 
             </section>
@@ -58,30 +57,13 @@
 
             </section>
 
-
-
-
         </main>
-
-
-
-
-
-
-    
-
-
-
-
-
-
 
         <footer>
 
+            <p>Sponsored by SheCodes</p>
+
         </footer>
     </body>
-
-
-
 
 </html>
