--- a/about.html
+++ b/about.html
@@ -4,12 +4,11 @@
         <meta charset="utf-8"/> 
         <meta 
             name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-            />
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-    <title>Soda's Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="style2.css"/>
+            <title>Soda's Portfolio</title>
+            <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+            <link rel="stylesheet" href="style2.css"/>
     </head>
 
     <body>
@@ -41,13 +40,11 @@
 
             </section>
 
-
-
         </main>
 
 
-
         <footer>
+            <p>Sponsored by SheCodes</p>
 
         </footer>
     </body>
